css/responsive.css
/*--------------------------------------------------------------
responsive CSS
--------------------------------------------------------------*/

@media (max-width: 1200px) {
    .tg-container {
        padding: 0 1%;
        width: 98%;
    }
    .boxed {
        width: 97%;
    }
}

@media(max-width: 980px) {
    .logo,
    .search-wrap,
    .cart-wrap {
        z-index: 99;
    }
    .header-bottom {
        position: relative;
    }
    #site-navigation,.center-logo-below-menu #site-navigation {
        float: right;
        padding: 20px 0;
    }
    .center-logo-below-menu .logo {
    	float: left;
    	width: auto;
    }
    .left-logo-below-menu .header-bottom .site-navigation-wrapper,
    .center-logo-below-menu .header-bottom .site-navigation-wrapper {
    	width: auto;
    	float: right;
    	text-align: left;
    	position: static;
    }
    #site-navigation ul li:hover > a::before,
    #site-navigation ul li.current-menu-item > a::before {
        display: none;
    }
    #site-navigation .menu {
        background: #fff none repeat scroll 0 0;
        display: none;
        left: 0;
        position: absolute;
        top: 100%;
        width: 100%;
        z-index: 9999;
        padding: 0 20px;
    }
    #site-navigation .menu-toggle {
        cursor: pointer;
        display: inline-block;
        font-size: 20px;
    }
    #site-navigation ul li,
    .transparent #site-navigation ul li {
        float: none;
        margin-right: 0;
        padding: 0;
        position: relative;
        border-bottom: 1px solid rgba(0, 0, 0, 0.1)
    }
    #site-navigation ul li:last-child,
    .transparent #site-navigation ul li:last-child {
        border-bottom: none;
    }
    #site-navigation ul.submenu li {
        padding: 0
    }
    #site-navigation ul.sub-menu::before {
        display: none;
    }
    #site-navigation ul.sub-menu,
    .transparent #site-navigation ul.sub-menu {
        background: #fff none repeat scroll 0 0;
        display: none;
        border-radius: 0;
        min-width: 100%;
        opacity: 1;
        position: static;
        left: 0;
        top: 0;
        -webkit-transition: none 0s ease 0s;
        -moz-transition: none 0s ease 0s;
        -ms-transition: none 0s ease 0s;
        -o-transition: none 0s ease 0s;
        transition: none 0s ease 0s;
        -webkit-transform: translate(0);
        -moz-transform: translate(0);
        -ms-transform: translate(0);
        -o-transform: translate(0);
        transform: translate(0);
        visibility: visible;
        box-shadow: none;
        padding-left: 20px;
        border-top: 1px solid rgba(0, 0, 0, 0.1);
    }
    #site-navigation ul > li a {
        line-height: 42px;
        padding: 0 15px;
    }
    #site-navigation ul.sub-menu li a,
    #site-navigation ul.sub-menu li ul.sub-menu li a,
    .transparent #site-navigation ul li a,
    .transparent #site-navigation ul.sub-menu li a {
        color: #4c5867;
        display: block;
        line-height: 42px;
        padding: 0 0 0 20px;
        text-align: left;
    }
    #site-navigation ul.sub-menu li {
        padding: 0;
    }
    #site-navigation ul li:hover,
    #site-navigation ul li.current-menu-item,
    #site-navigation ul li.current-menu-ancestor,
    #site-navigation ul.sub-menu li.current-menu-item,
    #site-navigation ul.sub-menu li.current-menu-ancestor,
    #site-navigation ul.sub-menu > li:hover {
        color: #30AFB8;
    }
    #site-navigation ul li:hover > a,
    #site-navigation ul li.current-menu-item a,
    #site-navigation ul li.current-menu-ancestor a {
        display: block;
        -webkit-transition: background 0.5s ease 0s;
        -moz-transition: background 0.5s ease 0s;
        -ms-transition: background 0.5s ease 0s;
        -o-transition: background 0.5s ease 0s;
        transition: background 0.5s ease 0s;
    }
    #site-navigation ul.sub-menu > li:hover:first-child a,
    #site-navigation ul.sub-menu > li:hover:last-child a {
        border-radius: 0;
    }
    #site-navigation ul.sub-menu li:hover .sub-toggle i {
        color: #ffffff;
    }

    #site-navigation ul li.menu-item-has-children.mobile-menu--slided .sub-toggle .fa{
        transform: rotate(180deg);
        transition: all 1s;
    }
    
    #site-navigation ul li.menu-item-has-children .sub-toggle {
        position: absolute;
        top: 11px;
        right: 15px;
        background-color: #30AFB8;
        height: 20px;
        width: 20px;
        text-align: center;
        line-height: 20px;
        color: #fff;
    }
    #site-navigation ul li.menu-item-has-children:hover .sub-toggle,
    .transparent #site-navigation ul li:hover .sub-toggle {
        color: #fff;
        cursor: pointer;
    }
    #site-navigation ul li.menu-item-has-children ul.submenu li a,
    .transparent .is-sticky #site-navigation ul li .sub-toggle {
        color: #FFF;
    }
    #site-navigation ul li ul.sub-menu li.menu-item-has-children ul {
        left: 0;
        opacity: 1;
        visibility: visible;
    }
    #site-navigation ul li ul.sub-menu li.menu-item-has-children .sub-toggle {
        top: 15px;
        color: #fff -webkit-transform: none;
        -moz-transform: none;
        -ms-transform: none;
        -o-transform: none;
        transform: none;
    }
    #site-navigation ul li ul.sub-menu li.menu-item-has-children ul {
        transition: none;
    }
    #site-navigation ul li ul.sub-menu li.menu-item-has-children:hover .sub-toggle {
        cursor: pointer;
        color: #fff;
    }
    .transparent #site-navigation ul li:hover a::before {
        display: none;
    }
    .transparent.header-sticky #site-navigation ul li a,
    .transparent.header-sticky #site-navigation .menu-toggle {
        color: #333333;
    }
}
/* ... */

